Add impact badges, enrich SEO, fix SkillUniverse light-mode & mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -10,22 +10,24 @@
   <!-- SEO Meta Tags -->
   <title>Ambuj Kumar Tripathi | AI Engineer & Full Stack Developer</title>
   <meta name="description"
-    content="AI Engineer & Full Stack Developer specializing in LLMs, RAG, Chatbots, and scalable web applications. Open to remote/onsite opportunities worldwide." />
+    content="AI Engineer & Full Stack Developer specializing in Production RAG Systems, LangGraph, Qdrant, LangChain, FastAPI, PII Masking, and LLMOps. Built Indian Legal AI Expert & Citizen Safety AI. Open to remote/onsite opportunities worldwide." />
   <meta name="keywords"
-    content="AI Engineer, Full Stack Developer, LLM, RAG, Chatbot Developer, React, Python, Machine Learning" />
+    content="AI Engineer, Full Stack Developer, LangGraph, RAG, LangChain, Qdrant, FastAPI, Presidio, PII Masking, LLMOps, Langfuse, Production AI, Chatbot Developer, React, Python, LLM, OpenRouter, Qwen, Llama, Ambuj Kumar Tripathi" />
   <meta name="author" content="Ambuj Kumar Tripathi" />
 
   <!-- Open Graph / Social Media -->
   <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://ambuj-portfolio-v2.netlify.app/" />
   <meta property="og:title" content="Ambuj Kumar Tripathi | AI Engineer & Full Stack Developer" />
   <meta property="og:description"
-    content="Building intelligent digital experiences with AI. Specializing in LLMs, RAG, and full-stack development." />
+    content="Production AI Engineer — built Indian Legal AI Expert (LangGraph + Qdrant + Qwen 3 235B) and Citizen Safety AI (LangChain + ChromaDB + Llama 3.3 70B). Specializing in RAG, LLMOps, PII masking." />
   <meta property="og:image" content="/logo.png" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ambuj Kumar Tripathi | AI Engineer" />
-  <meta name="twitter:description" content="Building intelligent digital experiences with AI." />
+  <meta name="twitter:description" content="Production AI Engineer — LangGraph, Qdrant, RAG, FastAPI, LangChain. Built Legal AI & Citizen Safety AI." />
+  <meta name="twitter:image" content="/logo.png" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://ambuj-portfolio-v2.netlify.app/" />
