Update SEO OG and Twitter images to absolute URLs for social crawlers

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
   <meta property="og:title" content="Ambuj Kumar Tripathi | AI Engineer & Full Stack Developer" />
   <meta property="og:description"
     content="Production AI Engineer — built Indian Legal AI Expert (LangGraph + Qdrant + Qwen 3 235B) and Citizen Safety AI (LangChain + ChromaDB + Llama 3.3 70B). Specializing in RAG, LLMOps, PII masking." />
-  <meta property="og:image" content="/projects/LegalAI_architecture.png" />
+  <meta property="og:image" content="https://ambuj-portfolio-v2.netlify.app/projects/LegalAI_architecture.png" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Ambuj Kumar Tripathi | AI Engineer" />
   <meta name="twitter:description"
     content="Production AI Engineer — LangGraph, Qdrant, RAG, FastAPI, LangChain. Built Legal AI & Citizen Safety AI." />
-  <meta name="twitter:image" content="/projects/LegalAI_architecture.png" />
+  <meta name="twitter:image" content="https://ambuj-portfolio-v2.netlify.app/projects/LegalAI_architecture.png" />
 
   <!-- Canonical URL -->
   <link rel="canonical" href="https://ambuj-portfolio-v2.netlify.app/" />
