--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
   <meta property="og:description"
     content="Production AI Engineer — built Indian Legal AI Expert (LangGraph + Qdrant + Qwen 3 235B) and Citizen Safety AI (LangChain + ChromaDB + Llama 3.3 70B). Specializing in RAG, LLMOps, PII masking." />
   <meta property="og:image" content="https://ambuj-portfolio-v2.netlify.app/projects/LegalAI_architecture.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:image:alt" content="Legal AI Expert Architecture Diagram" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
