Standardize Legal AI project name to Constitution of India AI across all files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!-- SEO Meta Tags -->
   <title>Ambuj Kumar Tripathi | AI Engineer & Full Stack Developer</title>
   <meta name="description"
-    content="AI Engineer & Full Stack Developer specializing in Production RAG Systems, LangGraph, Qdrant, LangChain, FastAPI, PII Masking, and LLMOps. Built Indian Legal AI Expert & Citizen Safety AI. Open to remote/onsite opportunities worldwide." />
+    content="AI Engineer & Full Stack Developer specializing in Production RAG Systems, LangGraph, Qdrant, LangChain, FastAPI, PII Masking, and LLMOps. Built Constitution of India AI & Citizen Safety AI. Open to remote/onsite opportunities worldwide." />
   <meta name="keywords"
     content="AI Engineer, Full Stack Developer, LangGraph, RAG, LangChain, Qdrant, FastAPI, Presidio, PII Masking, LLMOps, Langfuse, Production AI, Chatbot Developer, React, Python, LLM, OpenRouter, Qwen, Llama, Ambuj Kumar Tripathi" />
   <meta name="author" content="Ambuj Kumar Tripathi" />
@@ -20,11 +20,11 @@
   <meta property="og:url" content="https://ambuj-portfolio-v2.netlify.app/" />
   <meta property="og:title" content="Ambuj Kumar Tripathi | AI Engineer & Full Stack Developer" />
   <meta property="og:description"
-    content="Production AI Engineer — built Indian Legal AI Expert (LangGraph + Qdrant + Qwen 3 235B) and Citizen Safety AI (LangChain + ChromaDB + Llama 3.3 70B). Specializing in RAG, LLMOps, PII masking." />
+    content="Production AI Engineer — built Constitution of India AI (LangGraph + Qdrant + Qwen 3 235B) and Citizen Safety AI (LangChain + ChromaDB + Llama 3.3 70B). Specializing in RAG, LLMOps, PII masking." />
   <meta property="og:image" content="https://ambuj-portfolio-v2.netlify.app/projects/LegalAI_architecture.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
-  <meta property="og:image:alt" content="Legal AI Expert Architecture Diagram" />
+  <meta property="og:image:alt" content="Constitution of India AI Architecture Diagram" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
