--- a/public/legal-ai-case-study.html
+++ b/public/legal-ai-case-study.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Indian Legal AI Expert — Ambuj Kumar Tripathi</title>
+    <title>Constitution of India AI — Ambuj Kumar Tripathi</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Syne:wght@400;700;800&family=JetBrains+Mono:wght@400;600;700&display=swap"
         rel="stylesheet">
@@ -991,9 +991,9 @@
             <div class="cover-left">
                 <div class="cover-title-small animate-in">PRODUCTION AI SYSTEMS · FIELD DOCUMENTATION</div>
                 <div class="cover-title">
-                    <span class="t1 animate-in">Indian</span>
-                    <span class="t2 animate-in">Legal AI</span>
-                    <span class="t3 animate-in">Expert</span>
+                    <span class="t1 animate-in">Constitution</span>
+                    <span class="t2 animate-in">of India</span>
+                    <span class="t3 animate-in">AI</span>
                 </div>
                 <div class="cover-divider animate-in"></div>
                 <p class="cover-sub animate-in">Production-Grade RAG System — Architecture Deep Dive</p>
