--- a/public/legal-ai-case-study.html
+++ b/public/legal-ai-case-study.html
@@ -989,15 +989,23 @@
         <!-- ── SLIDE 1: COVER ── -->
         <div class="slide active entering" id="s1">
             <div class="cover-left">
-                <div class="cover-title-small animate-in">PRODUCTION AI SYSTEMS · FIELD DOCUMENTATION</div>
-                <div class="cover-title">
-                    <span class="t1 animate-in">Constitution</span>
-                    <span class="t2 animate-in">of India</span>
-                    <span class="t3 animate-in">AI</span>
+                <div class="cover-title-small animate-in"
+                    style="animation:fadeIn 0.6s ease forwards;animation-delay:0.2s">
+                    PRODUCTION AI SYSTEMS · FIELD DOCUMENTATION
                 </div>
-                <div class="cover-divider animate-in"></div>
-                <p class="cover-sub animate-in">Production-Grade RAG System — Architecture Deep Dive</p>
-                <div class="cover-tags animate-in">
+                <div class="cover-title">
+                    <span class="t1 animate-in"
+                        style="animation:slideRight 0.7s ease forwards;animation-delay:0.4s">Indian</span>
+                    <span class="t2 animate-in"
+                        style="animation:slideRight 0.7s ease forwards;animation-delay:0.6s">Legal AI</span>
+                    <span class="t3 animate-in"
+                        style="animation:slideRight 0.7s ease forwards;animation-delay:0.8s">System</span>
+                </div>
+                <div class="cover-divider animate-in" style="animation:fadeIn 0.5s ease forwards;animation-delay:1.0s">
+                </div>
+                <p class="cover-sub animate-in" style="animation:fadeIn 0.5s ease forwards;animation-delay:1.1s">
+                    Production-Grade RAG System — Architecture Deep Dive</p>
+                <div class="cover-tags animate-in" style="animation:fadeIn 0.5s ease forwards;animation-delay:1.2s">
                     <span class="tag">LangGraph</span>
                     <span class="tag">Qdrant</span>
                     <span class="tag">FastAPI</span>
@@ -1005,25 +1013,26 @@
                     <span class="tag">LLMOps</span>
                     <span class="tag">GDPR</span>
                 </div>
-                <div class="cover-author animate-in">
+                <div class="cover-author animate-in" style="animation:fadeIn 0.5s ease forwards;animation-delay:1.4s">
                     <div class="cover-author-name">Ambuj Kumar Tripathi</div>
-                    <div class="cover-author-role">GenAI Solution Architect · RAG Systems Specialist</div>
+                    <div class="cover-author-role">GenAI Solution Architect · RAG Systems Specialist · Immediate Joiner
+                    </div>
                 </div>
             </div>
             <div class="cover-right">
-                <div class="cover-stat animate-in">
+                <div class="cover-stat animate-in" style="animation:scaleIn 0.5s ease forwards;animation-delay:0.8s">
                     <div class="cover-stat-num">10,833</div>
                     <div class="cover-stat-lbl">Chunks Indexed</div>
                 </div>
-                <div class="cover-stat animate-in">
+                <div class="cover-stat animate-in" style="animation:scaleIn 0.5s ease forwards;animation-delay:1.0s">
                     <div class="cover-stat-num">6</div>
                     <div class="cover-stat-lbl">Indian Legal Acts</div>
                 </div>
-                <div class="cover-stat animate-in">
+                <div class="cover-stat animate-in" style="animation:scaleIn 0.5s ease forwards;animation-delay:1.2s">
                     <div class="cover-stat-num">768</div>
                     <div class="cover-stat-lbl">Vector Dimensions</div>
                 </div>
-                <div class="cover-stat animate-in">
+                <div class="cover-stat animate-in" style="animation:scaleIn 0.5s ease forwards;animation-delay:1.4s">
                     <div class="cover-stat-num">₹0</div>
                     <div class="cover-stat-lbl">Monthly Cost</div>
                 </div>
@@ -1290,40 +1299,59 @@
                     style="font-family:'Bebas Neue';font-size:clamp(1.8rem,4vw,3rem);color:var(--white);margin-bottom:2vh;">
                     GDPR Compliant · Zero PII Leakage · Multi-Layer Defense</h2>
                 <div class="sec-list">
-                    <div class="sec-item animate-in">
+                    <div class="sec-item animate-in"
+                        style="animation:slideRight 0.4s ease forwards;animation-delay:0.3s">
                         <div class="sec-num" style="color:var(--copper)">01</div>
                         <div>
                             <div style="font-weight:700;color:var(--white);font-size:0.9rem;margin-bottom:3px">PII
                                 Masking — Microsoft Presidio + spaCy</div>
-                            <div style="font-size:0.75rem;color:var(--pale)">Aadhaar · Phone · Email · Name detected and
-                                masked BEFORE hitting Qdrant API. Same semantic result, zero PII exposure.</div>
+                            <div style="font-size:0.75rem;color:var(--pale)">Aadhaar · Phone (+91[6-9]\d{9}) · Email ·
+                                Name detected and masked BEFORE hitting Qdrant API. Same semantic result, zero PII
+                                exposure.</div>
                         </div>
                     </div>
-                    <div class="sec-item animate-in">
+                    <div class="sec-item animate-in"
+                        style="animation:slideRight 0.4s ease forwards;animation-delay:0.4s">
                         <div class="sec-num" style="color:var(--blue)">02</div>
                         <div>
                             <div style="font-weight:700;color:var(--white);font-size:0.9rem;margin-bottom:3px">Google
                                 OAuth 2.0 + JWT</div>
                             <div style="font-size:0.75rem;color:var(--pale)">Scope: openid email profile only — no Gmail
-                                access. JWT: HS256, 7-day expiry.</div>
+                                access. JWT: HS256, 7-day expiry. Admin check via env variable. Frontend useCallback
+                                prevents auth re-render loops.</div>
                         </div>
                     </div>
-                    <div class="sec-item animate-in">
+                    <div class="sec-item animate-in"
+                        style="animation:slideRight 0.4s ease forwards;animation-delay:0.5s">
                         <div class="sec-num" style="color:var(--green)">03</div>
                         <div>
                             <div style="font-weight:700;color:var(--white);font-size:0.9rem;margin-bottom:3px">Rate
                                 Limiting + Circuit Breaker</div>
                             <div style="font-size:0.75rem;color:var(--pale)">SlowAPI: 5 req/min per IP. CircuitBreaker:
-                                10 failures → OPEN 120s → HALF-OPEN → retry. Prevents cascading API failures.</div>
+                                10 failures → OPEN 120s → HALF-OPEN → retry. Prevents cascading OpenRouter failures.
+                            </div>
                         </div>
                     </div>
-                    <div class="sec-item animate-in">
-                        <div class="sec-num" style="color:var(--mist)">04</div>
+                    <div class="sec-item animate-in"
+                        style="animation:slideRight 0.4s ease forwards;animation-delay:0.6s">
+                        <div class="sec-num" style="color:var(--copper-lt)">04</div>
                         <div>
                             <div style="font-weight:700;color:var(--white);font-size:0.9rem;margin-bottom:3px">GDPR —
                                 MongoDB 30-Day TTL</div>
                             <div style="font-size:0.75rem;color:var(--pale)">Article 5(1)(e): Data minimization.
-                                expireAfterSeconds=2592000. Auto-delete, no cron job.</div>
+                                expireAfterSeconds=2592000. Auto-delete, no cron job. Abusive queries NOT saved to
+                                MongoDB — no pollution.</div>
+                        </div>
+                    </div>
+                    <div class="sec-item animate-in"
+                        style="animation:slideRight 0.4s ease forwards;animation-delay:0.7s">
+                        <div class="sec-num" style="color:var(--mist)">05</div>
+                        <div>
+                            <div style="font-weight:700;color:var(--white);font-size:0.9rem;margin-bottom:3px">Vector
+                                Isolation — Qdrant Payload Filters</div>
+                            <div style="font-size:0.75rem;color:var(--pale)">3-field filter: source_file + is_temporary
+                                + uploaded_by=email. Enforced at DB level. User A cannot access User B's documents even
+                                with same filename.</div>
                         </div>
                     </div>
                 </div>
