--- a/public/legal-ai-case-study.html
+++ b/public/legal-ai-case-study.html
@@ -287,8 +287,9 @@
         }
 
         .animate-in {
+            animation: fadeUp 0.6s ease both;
             animation-play-state: paused;
-            animation-fill-mode: both;
+            opacity: 0;
         }
 
         @keyframes fadeUp {
